[gd_scene load_steps=4 format=3 uid="uid://dto7hqhur8hfo"]

[ext_resource type="Script" path="res://scripts/moving_platform.gd" id="1_w5d0c"]

[sub_resource type="BoxMesh" id="BoxMesh_8wav0"]
size = Vector3(5, 0.5, 5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_r722l"]
points = PackedVector3Array(-2.5, -0.25, -2.5, -2.5, 0.25, -2.5, 2.5, -0.25, -2.5, -2.5, -0.25, 2.5, -2.5, 0.25, 2.5, 2.5, 0.25, -2.5, 2.5, -0.25, 2.5, 2.5, 0.25, 2.5)

[node name="MovingPlatform" type="Node3D"]
script = ExtResource("1_w5d0c")

[node name="AnimatableBody3D" type="AnimatableBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="AnimatableBody3D"]
mesh = SubResource("BoxMesh_8wav0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="AnimatableBody3D"]
shape = SubResource("ConvexPolygonShape3D_r722l")

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
